[gd_scene load_steps=24 format=3 uid="uid://dnjc46gvng0wc"]

[ext_resource type="Script" path="res://scripts/Enemy_scripts/golem.gd" id="1_dkjuh"]
[ext_resource type="Texture2D" uid="uid://cs1motanxxeoe" path="res://assets/Enemy_Galore_I/Golem/No Armor/Golem_IdleB.png" id="1_gfpvp"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/Damageable.gd" id="2_3n033"]
[ext_resource type="Texture2D" uid="uid://b75ppl2hmrvtt" path="res://assets/Enemy_Galore_I/Golem/No Armor/Golem_DeathB.png" id="2_di8up"]
[ext_resource type="Texture2D" uid="uid://cgdwpm63tbqof" path="res://assets/Enemy_Galore_I/Golem/No Armor/Golem_HitB.png" id="2_jvs7e"]
[ext_resource type="Script" path="res://scripts/Player_scripts/CharacterStateMachine.gd" id="4_v4iy4"]
[ext_resource type="Script" path="res://scripts/Player_scripts/State.gd" id="5_b8ab7"]
[ext_resource type="Script" path="res://scripts/Enemy_scripts/HitState.gd" id="6_r0cgg"]

[sub_resource type="Animation" id="Animation_6aecf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_my3ln"]
resource_name = "dead"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_di8up")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_y4d50"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_jvs7e")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_3qvfy"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_gfpvp")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o6lpa"]
_data = {
"RESET": SubResource("Animation_6aecf"),
"dead": SubResource("Animation_my3ln"),
"hit": SubResource("Animation_y4d50"),
"idle": SubResource("Animation_3qvfy")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_buddq"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j6uxn"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bhng8"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_irwtd"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m7l6e"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kx4to"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y867a"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_usjau"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ncd5m"]
states/dead/node = SubResource("AnimationNodeAnimation_j6uxn")
states/dead/position = Vector2(611, 100)
states/hit/node = SubResource("AnimationNodeAnimation_bhng8")
states/hit/position = Vector2(457, 100)
states/idle/node = SubResource("AnimationNodeAnimation_irwtd")
states/idle/position = Vector2(345, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_m7l6e"), "idle", "hit", SubResource("AnimationNodeStateMachineTransition_kx4to"), "hit", "dead", SubResource("AnimationNodeStateMachineTransition_y867a"), "hit", "idle", SubResource("AnimationNodeStateMachineTransition_usjau")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6djx"]
size = Vector2(187.563, 20)

[node name="Golem" type="CharacterBody2D" node_paths=PackedStringArray("hit_state")]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_dkjuh")
hit_state = NodePath("CharacterStateMachine/hit")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 2)
texture = ExtResource("1_gfpvp")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_o6lpa")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
scale = Vector2(1.08871, 1.23126)
shape = SubResource("CircleShape2D_buddq")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_o6lpa")
}
tree_root = SubResource("AnimationNodeStateMachine_ncd5m")
anim_player = NodePath("../AnimationPlayer")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_3n033")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("4_v4iy4")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("idle")

[node name="idle" type="Node" parent="CharacterStateMachine"]
script = ExtResource("5_b8ab7")

[node name="dead" type="Node" parent="CharacterStateMachine"]
script = ExtResource("5_b8ab7")
can_move = false

[node name="hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "dead_state", "idle_state", "return_state")]
script = ExtResource("6_r0cgg")
damageable = NodePath("../../Damageable")
dead_state = NodePath("../dead")
idle_state = NodePath("../idle")
return_state = NodePath("../idle")
can_move = false

[node name="Timer" type="Timer" parent="CharacterStateMachine/hit"]
wait_time = 0.25
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-1, 5)
shape = SubResource("RectangleShape2D_i6djx")

[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="CharacterStateMachine/hit/Timer" to="CharacterStateMachine/hit" method="_on_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
